--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,8 +8,9 @@ server:
 data:
   database:
     driver: mysql
-    source: root:root@tcp(127.0.0.1:3306)/test
+    source: root:123456@tcp(127.0.0.1:3306)/test
   redis:
-    addr: 127.0.0.1:6379
+    addr: 127.0.0.1:7000
+    password: "123456"
     read_timeout: 0.2s
     write_timeout: 0.2s
